# CoalescenceML

./: .darglint  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dashboard for Wine.ipynb  README.md  pyproject.toml  wine_quality_dashboard.html
.github/: codecov.yml  pull_request_template.md
.github/workflows/: environment-setup.yml  integration-test.yml  lint.yml  main.yml  publish.yml  pull_request.yml  unit-test.yml
demos/: README.md
demos/evidently/: quickstart.py
demos/kubeflow/: README.md  pipeline.py
demos/lightgbm/: pipeline.py
demos/mlflow/: pipeline.py  pipeline_tf.py  predict.sh  quickstart.py
demos/mlflow/deploy_templates/: deploy_template.yaml  service_template.yaml
demos/pytorch/: quickstart.py
demos/quickstart/: README.md  quickstart.py
demos/sklearn/: quickstart.py
demos/statsmodels/: pipeline.py
demos/tensorflow/: pyproject.toml  quickstart.py
demos/wandb_tracking/: pipeline.py
demos/xgboost/: pipeline.py
docker/: dev-nogpu.Dockerfile
scripts/: interrogate.sh  lint.sh  mypy.sh  publish.sh  test-coverage.sh
src/coalescenceml/: __init__.py  constants.py  directory.py  enums.py  environment.py  exceptions.py  logger.py
src/coalescenceml/artifact_store/: __init__.py  base_artifact_store.py  exceptions.py  local_artifact_store.py
src/coalescenceml/artifacts/: __init__.py  base_artifact.py  constants.py  data_analysis_artifact.py  data_artifact.py  metrics_artifact.py  model_artifact.py  type_registry.py
src/coalescenceml/cli/: __init__.py  cli.py  config.py  core.py  hidden.py  integration.py  stack.py  stack_components.py  utils.py  version.py
src/coalescenceml/config/: __init__.py  base_config.py  config_keys.py  global_config.py  profile_config.py
src/coalescenceml/container_registry/: __init__.py  base_container_registry.py
src/coalescenceml/deployments/: basedeployer.py  config.py  config.sh  deploy.sh  kubedeployer.py  mflow.py  modelobject.py
src/coalescenceml/deployments/templates/: deploy_template.yaml
src/coalescenceml/experiment_tracker/: __init__.py  base_experiment_tracker.py
src/coalescenceml/integrations/: __init__.py  constants.py  exceptions.py  integration.py  registry.py  utils.py
src/coalescenceml/integrations/aws s3/artifact store/: aws_artifact_store.py
src/coalescenceml/integrations/aws_s3/: __init__.py
src/coalescenceml/integrations/aws_s3/artifact store/: __init__.py  aws_artifact_store.py
src/coalescenceml/integrations/aws_s3/artifact_store/: __init__.py  aws_artifact_store.py
src/coalescenceml/integrations/azure_datalake/: __init__.py
src/coalescenceml/integrations/azure_datalake/artifact_store/: __init__.py  azure_artifact_store.py
src/coalescenceml/integrations/evidently/: __init__.py
src/coalescenceml/integrations/kubeflow/: __init__.py  kubeflow_orchestrator.py  utils.py
src/coalescenceml/integrations/lightgbm/: __init__.py
src/coalescenceml/integrations/mlflow/: __init__.py  exceptions.py  mlflow_integration.py  mlflow_step_decorator.py
src/coalescenceml/integrations/pandas/: __init__.py
src/coalescenceml/integrations/pytorch/: __init__.py
src/coalescenceml/integrations/pytorch_lightning/: __init__.py
src/coalescenceml/integrations/s3/: __init__.py
src/coalescenceml/integrations/sklearn/: __init__.py
src/coalescenceml/integrations/statsmodels/: __init__.py
src/coalescenceml/integrations/tensorflow/: __init__.py
src/coalescenceml/integrations/wandb/: __init__.py  wandb_step_decorator.py
src/coalescenceml/integrations/xgboost/: __init__.py
src/coalescenceml/io/: fileio.py  fileio_registry.py  filesystem.py  utils.py
src/coalescenceml/metadata_store/: __init__.py  base_metadata_store.py  mysql_metadata_store.py  sqlite_metadata_store.py
src/coalescenceml/model_deployments/: base_deploy_step.py  mlflowobject.py  modelobject.py
src/coalescenceml/model_deployments/templates/: service_template.yaml
src/coalescenceml/monitors/: BaseProfileStep.py  EvidentlyProfileStep.py  test_profile.py
src/coalescenceml/orchestrator/: __init__.py  base_orchestrator.py  kubeflow_orchestrator.py  kubeflow_stack_component.py  local_orchestrator.py  utils.py
src/coalescenceml/pipeline/: __init__.py  base_pipeline.py  exceptions.py  pipeline_decorator.py  runtime_configuration.py  schedule.py
src/coalescenceml/post_execution/: __init__.py  artifact.py  pipeline.py  pipeline_run.py  step.py
src/coalescenceml/producers/: __init__.py  base_producer.py  df_producer.py  exceptions.py  json_producer.py  numpy_producer.py  pd_series_producer.py  producer_registry.py
src/coalescenceml/stack/: __init__.py  exceptions.py  stack.py  stack_component.py  stack_component_class_registry.py  stack_validator.py
src/coalescenceml/stack_store/: __init__.py  base_stack_store.py  local_stack_store.py  sql_stack_store.py
src/coalescenceml/stack_store/model/: __init__.py  stack_component_wrapper.py  stack_store_model.py  stack_wrapper.py
src/coalescenceml/step/: __init__.py  base_step.py  base_step_config.py  exceptions.py  output.py  step_context.py  step_decorator.py  step_environment.py  utils.py
src/coalescenceml/step_operator/: __init__.py  base_step_operator.py  entrypoint.py  step_executor_operator.py
src/coalescenceml/utils/: daemon.py  docker_utils.py  json_utils.py  readability_utils.py  singleton.py  source_utils.py  yaml_utils.py
tests/: conftest.py
tests/integration/: example_validators.py  test_examples.py
tests/unit/artifact_store/: test_local_artifact_store.py
tests/unit/cli/: test_cli.py  test_version.py
tests/unit/config/: test_global_config.py
tests/unit/container_registry/: test_base_container_registry.py
tests/unit/deployments/: test_mlflow_object.py
tests/unit/io/: test_fileio.py
tests/unit/metadata_store/: test_mysql_metadata_store.py  test_sqlite_metadata_store.py
tests/unit/orchestrators/: test_local_orchestrator.py  test_utils.py
tests/unit/producers/: test_base_producer.py  test_producer_registry.py
tests/unit/utils/: test_readability_utils.py  test_singleton.py  test_source_utils.py
(+57 files in other folders)
