[tool.poetry]
name = "coml_tf_demoo"
version = "0.1.0"
description = ""
authors = ["Jerry Sun <sun.jerry.2000@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.0"
coalescenceml = {path = "../../", develop=true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
